dowmload mango.jpg and add the image to lassi.html

--- a/recipes/lassi.html
+++ b/recipes/lassi.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>LASSI</h1>
+        <br>
+        <br>
+        <img src="mango.jpg" alt="Mango lassi">
     </body>
 </html>
