--- a/recipes/lassi.html
+++ b/recipes/lassi.html
@@ -9,5 +9,8 @@
         <br>
         <br>
         <img src="mango.jpg" alt="Mango lassi">
+        <br><br>
+        <h3>Description</h3><br>
+        <p>Learn what a lassi drink is with this basic recipe for the popular Indian beverage. You can adjust the amount of yogurt or water for a thicker or thinner consistency. Garnish with fresh mint if desired.</p>
     </body>
 </html>
