added Ingredients to the recipe.html

--- a/recipes/lassi.html
+++ b/recipes/lassi.html
@@ -12,5 +12,15 @@
         <br><br>
         <h3>Description</h3><br>
         <p>Learn what a lassi drink is with this basic recipe for the popular Indian beverage. You can adjust the amount of yogurt or water for a thicker or thinner consistency. Garnish with fresh mint if desired.</p>
+        <br><br>
+        <h3>Ingredients</h3><br>
+        <ul>
+            <li>1 ½ cups mangos - peeled, seeded, chopped, and chilled</li>
+            <li>1 ½ cups plain yogurt</li>
+            <li>½ cup cold milk</li>
+            <li>2 tablespoons heavy cream</li>
+            <li>2 tablespoons confectioners' sugar</li>
+            <li>½ teaspoon ground cardamom</li>
+        </ul>
     </body>
 </html>
