added directions to recipe.html

--- a/recipes/lassi.html
+++ b/recipes/lassi.html
@@ -22,5 +22,12 @@
             <li>2 tablespoons confectioners' sugar</li>
             <li>½ teaspoon ground cardamom</li>
         </ul>
+        <br><br>
+        <h3>Directions</h3>
+        <ol>
+            <li>Combine mangos, yogurt, milk, cream, confectioners' sugar, and cardamom in a blender</li>
+            <li>blend until smooth and frothy.</li>
+            <li>Pour into glasses and serve immediately.</li>
+        </ol>
     </body>
 </html>
