added burgers.html and bangbangsauce.html to index.html as aunordered list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lassi.html">lassi</a>
+        <ul>
+            <li><a href="./recipes/lassi.html">lassi</a></li>
+            <li><a href="./recipes/Burgers.html">Homemade Smash Burgers</a></li>
+            <li><a href="./recipes/bangbandsauce.html">Bang Bang Sauce</a></li>
+        </ul>
     </body>
 </html>
